--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next -p 3001",
+    "dev": "next -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "mongoose": "^6.5.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -26,6 +28,7 @@
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-slick": "^0.23.10",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "typescript": "4.7.4"
