--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
-    "sass": "^1.53.0",
+    "sass": "^1.54.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-slick": "^0.23.10",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "typescript": "4.7.4"
