--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "@stripe/stripe-js": "^1.35.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "mongoose": "^6.5.1",
