--- a/.env
+++ b/.env
@@ -23,3 +23,9 @@ NEXTAUTH_URL=http://localhost:3000
 
 
 JWT_SECRET=mj7GB5qjspLKwPSzV96H2LUuQkbketS56Enz7cWT
+
+
+
+
+
+API_URL=http://localhost:5000
