--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
     "sass": "^1.54.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "stripe": "^10.2.0"
   },
   "devDependencies": {
     "@types/node": "18.6.5",
