--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-tabs": "^5.1.0",
     "sass": "^1.54.3",
     "slick-carousel": "^1.8.1",
+    "sort-array": "^4.1.5",
     "stripe": "^10.2.0"
   },
   "devDependencies": {
