--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
