--- a/.env
+++ b/.env
@@ -27,4 +27,4 @@ NEXTAUTH_URL=http://localhost:3000
 
 JWT_SECRET=mj7GB5qjspLKwPSzV96H2LUuQkbketS56Enz7cWT
 
-API_URL=http://localhost:5000
+NEXT_PUBLIC_API_URL=http://localhost:5000
