--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.0",
     "mongoose": "^6.5.1",
     "next": "12.2.4",
+    "p-map": "^5.5.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
