--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
+    "react-toastify": "^9.0.8",
     "sass": "^1.54.3",
     "slick-carousel": "^1.8.1",
     "sort-array": "^4.1.5",
