--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "p-map": "^5.5.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-chip-input": "^1.1.0",
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.2",
