--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^1.35.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "http-proxy": "^1.18.1",
     "mini-state": "^1.12.0",
     "mongoose": "^6.5.5",
     "next": "12.2.5",
@@ -34,6 +35,7 @@
     "stripe": "^10.8.0"
   },
   "devDependencies": {
+    "@types/http-proxy": "^1.17.9",
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
