--- a/.env
+++ b/.env
@@ -26,4 +26,4 @@ NEXTAUTH_URL=https://www.dbzbeds.co.uk
 
 JWT_SECRET=mj7GB5qjspLKwPSzV96H2LUuQkbketS56Enz7cWT
 
-NEXT_PUBLIC_API_URL=https://api.dbzbeds.co.uk
+NEXT_PUBLIC_API_URL=http://localhost:5000
