--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.6",
     "react-tabs": "^5.1.0",
     "react-toastify": "^9.0.8",
     "sass": "^1.54.9",
