--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.5",
-    "@stripe/stripe-js": "^1.35.0",
+    "@stripe/react-stripe-js": "^1.12.0",
+    "@stripe/stripe-js": "^1.39.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "http-proxy": "^1.18.1",
