--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -30,6 +31,7 @@
     "react-spinners": "^0.13.6",
     "react-tabs": "^5.1.0",
     "react-toastify": "^9.0.8",
+    "sharp": "^0.31.1",
     "sass": "^1.54.9",
     "slick-carousel": "^1.8.1",
     "sort-array": "^4.1.5",
