--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
 MONGODB_URI=mongodb+srv://bedsdivans:EW6yqWPEwtXbPzbA@cluster0.vgpwb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
-BASE_URL=https://www.dbzbeds.co.uk
+BASE_URL=http://localhost:3000
 
-NEXT_PUBLIC_BASE_URL=https://www.dbzbeds.co.uk
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
 YOUR_MEASUREMENT_ID=G-5H4XPQE5EZ
 
