--- a/package.json
+++ b/package.json
@@ -10,31 +10,24 @@
     "export": "next export"
   },
   "dependencies": {
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@stripe/react-stripe-js": "^1.12.0",
     "@stripe/stripe-js": "^1.39.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "http-proxy": "^1.18.1",
-    "mini-state": "^1.12.0",
+    "localforage": "^1.10.0",
     "mongoose": "^6.5.5",
     "next": "12.2.5",
-    "p-map": "^5.5.0",
     "react": "18.2.0",
-    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
-    "react-spinners": "^0.13.6",
     "react-tabs": "^5.1.0",
-    "react-toastify": "^9.0.8",
-    "sharp": "^0.31.1",
     "sass": "^1.54.9",
+    "sharp": "^0.31.1",
     "slick-carousel": "^1.8.1",
-    "sort-array": "^4.1.5",
     "stripe": "^10.8.0"
   },
   "devDependencies": {
